score/testdata/networkpolicy-cronjob-matching.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testapp-netpol
  namespace: testspace
spec:
  podSelector:
    matchLabels:
      app: foo
  policyTypes:
    - Egress
    - Ingress
---
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: cronjob-test-1
  namespace: testspace
spec:
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            app: foo
        spec:
          containers:
          - name: foobar
            image: foo:bar
